# pixoo

./: .gitignore  README.MD  README.md  examples.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  python-publish.yml
examples/banano-pixoo/: .env  main.py  requirements.txt
examples/pixoorest/: main.py
examples/power-usage/: main.py  requirements.txt
pixoo/: __init__.py  _colors.py  _font.py  _font2.py  api.py  exceptions.py  find_device.py  simulator.py  utilities.py
pixoo/configurations/: restconfiguration.py
pixoo/constants/: font.py
pixoo/enums/: channel.py  textscrolldirection.py
pixoo/objects/: pixoo.py  pixoorest.py  simulator.py
src/pixoo/: __init__.py
src/pixoo/configurations/: pixooconfiguration.py  simulatorconfiguration.py
src/pixoo/constants/: colors.py
src/pixoo/enums/: imageresamplemode.py
src/pixoo/objects/: pixoo.py  pixoorest.py  simulator.py
