[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "pixoo"
version = "0.9.2"
authors = [
    { name = "Ron Talman", email = "ron@somethingwithcomputers.com" },
]
description = "A library to easily communicate with the Divoom Pixoo 64"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ['dependencies', 'keywords']

[project.urls]
Homepage = "https://github.com/SomethingWithComputers/pixoo"
Issues = "https://github.com/SomethingWithComputers/pixoo/issues"

#[tool.setuptools]
#py-modules = ["__init__", "utilities"]
#
#[tool.setuptools.packages.find]
#where = ["pixoo"]
#namespaces = false